Moved aria-label to correct tag

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body>
 
-    <div class="card" aria-label="Frontend Mentor">
-        <a href="https://www.frontendmentor.io">
+    <div class="card">
+        <a href="https://www.frontendmentor.io" aria-label="Frontend Mentor">
             <img class="card-img" src="./images/image-qr-code.png" alt="">
         </a>
         <h1 class="card-header">Improve your front-end skills by building projects</h1>
