--- a/index.html
+++ b/index.html
@@ -12,19 +12,23 @@
 </head>
 
 <body>
+    <main>
+        <div class="card">
+            <a href="https://www.frontendmentor.io" aria-label="Frontend Mentor">
+                <img class="card-img" src="./images/image-qr-code.png" alt="">
+            </a>
+            <h1 class="card-header">Improve your front-end skills by building projects</h1>
+            <p class="card-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+            </p>
+        </div>
+    </main>
 
-    <div class="card">
-        <a href="https://www.frontendmentor.io" aria-label="Frontend Mentor">
-            <img class="card-img" src="./images/image-qr-code.png" alt="">
-        </a>
-        <h1 class="card-header">Improve your front-end skills by building projects</h1>
-        <p class="card-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
-
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="https://ib-rim.github.io/">Ibrahim Bashir</a>.
-    </div>
+    <footer>
+        <div class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="https://ib-rim.github.io/">Ibrahim Bashir</a>.
+        </div>
+    </footer>
 </body>
 
 </html>
